--- a/trunk/OAIServer/OAIServer/OAIServer.csproj
+++ b/trunk/OAIServer/OAIServer/OAIServer.csproj
@@ -62,7 +62,16 @@
     <Compile Include="OAIServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryConfig.cs" />
+    <Compile Include="SchemaMapping.cs" />
     <Compile Include="Utility.cs" />
+    <Compile Include="Xml\Facets.cs" />
+    <Compile Include="Xml\Generator.cs" />
+    <Compile Include="Xml\InstanceAttribute.cs" />
+    <Compile Include="Xml\InstanceElement.cs" />
+    <Compile Include="Xml\InstanceGroup.cs" />
+    <Compile Include="Xml\InstanceObject.cs" />
+    <Compile Include="Xml\XmlGen.cs" />
+    <Compile Include="Xml\XmlSampleGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
