--- a/trunk/OAIServer/OAIServer/OAIServer.csproj
+++ b/trunk/OAIServer/OAIServer/OAIServer.csproj
@@ -53,16 +53,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataConnection.cs" />
     <Compile Include="FieldMapping.cs" />
     <Compile Include="GetRecordRequest.cs" />
     <Compile Include="IdentifyRequest.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="MappedTable.cs" />
-    <Compile Include="MetadataFormat.cs" />
+    <Compile Include="MetadataFormats\MetadataFormat.cs" />
+    <Compile Include="MetadataFormats\MetadataFormatSet.cs" />
+    <Compile Include="MetadataFormats\NZORMetadataFormat.cs" />
     <Compile Include="OAIServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryConfig.cs" />
-    <Compile Include="SchemaMapping.cs" />
+    <Compile Include="MetadataFormats\MetadataFormatMapping.cs" />
+    <Compile Include="MetadataFormats\SchemaMapping.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Xml\Facets.cs" />
     <Compile Include="Xml\Generator.cs" />
