--- a/trunk/OAIServer/OAIService/OAIService.csproj
+++ b/trunk/OAIServer/OAIService/OAIService.csproj
@@ -60,7 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Config\nzor_mapping.xml" />
+    <Content Include="Config\nzor_mappings.xml" />
     <Content Include="Global.asax" />
     <Content Include="OAIPMHService.svc" />
     <Content Include="Responses\GetRecordResponse.xml" />
