--- a/trunk/OAIServer/OAIServer/OAIServer.csproj
+++ b/trunk/OAIServer/OAIServer/OAIServer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FieldMapping.cs" />
     <Compile Include="GetRecordRequest.cs" />
     <Compile Include="IdentifyRequest.cs" />
+    <Compile Include="ListRecordsRequest.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="MappedTable.cs" />
     <Compile Include="MetadataFormats\MetadataFormat.cs" />
