--- a/trunk/OAIServer/OAIService/OAIService.csproj
+++ b/trunk/OAIServer/OAIService/OAIService.csproj
@@ -60,11 +60,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Config\nzor_mappings.xml" />
+    <Content Include="Config\nzor_mapping.xml" />
     <Content Include="Global.asax" />
     <Content Include="OAIPMHService.svc" />
     <Content Include="Responses\GetRecordResponse.xml" />
     <Content Include="Responses\IdentifyResponse.xml" />
+    <Content Include="Responses\ListRecordsResponse.xml" />
     <Content Include="Services\test_config.xml" />
     <Content Include="Web.config" />
   </ItemGroup>
