--- a/trunk/OAIServer/OAIService/Web.config
+++ b/trunk/OAIServer/OAIService/Web.config
@@ -25,6 +25,8 @@
   
 	<appSettings>
     <add key="LOG_FILE" value="C:\Development\NZOR\Dev\OAIServer\OAIService\Log\log.txt" />
+    <add key="MaxRecordsReturned" value="500"/>
+    <add key="TokenExpirationHours" value="2"/>
   </appSettings>
     
     
