--- a/trunk/OAIServer/OAIService/Web.config
+++ b/trunk/OAIServer/OAIService/Web.config
@@ -25,6 +25,7 @@
   
 	<appSettings>
     <add key="LOG_FILE" value="C:\Development\NZOR\Dev\OAIServer\OAIService\Log\log.txt" />
+    <add key="DEBUG" value="true"/>
     <add key="MaxRecordsReturned" value="500"/>
     <add key="TokenExpirationHours" value="2"/>
   </appSettings>
@@ -106,12 +107,9 @@
 
     <services>
 			<service behaviorConfiguration="OAIService.Service1Behavior" name="OAIService.OAIPMHService">
-				<endpoint address="" binding="webHttpBinding" contract="OAIService.IOAIPMHService" behaviorConfiguration="webHttp">
-					<identity>
-						<dns value="localhost"/>
-					</identity>
-				</endpoint>
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="" binding="webHttpBinding" contract="OAIService.IOAIPMHService" behaviorConfiguration="webHttp" />
+        <endpoint address="Service" binding="wsHttpBinding" contract="OAIService.IOAIPMHService" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			</service>
 		</services>
 		<behaviors>
@@ -120,11 +118,12 @@
 					<!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
 					<serviceMetadata httpGetEnabled="true"/>
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-					<serviceDebug includeExceptionDetailInFaults="false"/>          
+					<serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceAuthorization principalPermissionMode="None" />      
 				</behavior>
 			</serviceBehaviors>
       <endpointBehaviors>
-        <behavior name="webHttp">
+        <behavior name="webHttp">          
           <webHttp/>
         </behavior>
       </endpointBehaviors>
