--- a/trunk/OAIServer/OAIService/Web.config
+++ b/trunk/OAIServer/OAIService/Web.config
@@ -106,20 +106,26 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
 
     <services>
-			<service behaviorConfiguration="OAIService.Service1Behavior" name="OAIService.OAIPMHService">
+			<service behaviorConfiguration="OAIService.Service1Behavior" name="OAIService.OAIPMHService">        
         <endpoint address="" binding="webHttpBinding" contract="OAIService.IOAIPMHService" behaviorConfiguration="webHttp" />
         <endpoint address="Service" binding="wsHttpBinding" contract="OAIService.IOAIPMHService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			</service>
 		</services>
+    
+    <bindings>
+      <wsHttpBinding>
+        
+      </wsHttpBinding>
+    </bindings>
 		<behaviors>
 			<serviceBehaviors>
-				<behavior name="OAIService.Service1Behavior">
+				<behavior name="OAIService.Service1Behavior">          
 					<!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
 					<serviceMetadata httpGetEnabled="true"/>
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-					<serviceDebug includeExceptionDetailInFaults="false"/>
-          <serviceAuthorization principalPermissionMode="None" />      
+					<serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceAuthorization principalPermissionMode="None" />          
 				</behavior>
 			</serviceBehaviors>
       <endpointBehaviors>
