--- a/trunk/OAIServer/TestOAIService/app.config
+++ b/trunk/OAIServer/TestOAIService/app.config
@@ -37,11 +37,11 @@
                 <binding name="WSHttpBinding_IOAIPMHService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="1000000"
                     messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
                     allowCookies="false">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <readerQuotas maxDepth="32" maxStringContentLength="100000" maxArrayLength="16384"
+                        maxBytesPerRead="10000" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00"
                         enabled="false" />
                     <security mode="Message">
@@ -56,12 +56,10 @@
         <client>
             <endpoint binding="customBinding" bindingConfiguration="WebHttpBinding_IOAIPMHService"
                 contract="oai.IOAIPMHService" name="WebHttpBinding_IOAIPMHService" />
-            <endpoint address="http://localhost:2707/OAIPMHService.svc/Service"
+            <endpoint address="http://devserver02/PlantNamesOAI/OAIPMHService.svc/Service"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IOAIPMHService"
                 contract="oai.IOAIPMHService" name="WSHttpBinding_IOAIPMHService">
-                <identity>
-                    <userPrincipalName value="richardsk@landcare.ad.landcareresearch.co.nz" />
-                </identity>
+               
             </endpoint>
         </client>
     </system.serviceModel>
