--- a/trunk/OAIServer/OAIService/Web.config
+++ b/trunk/OAIServer/OAIService/Web.config
@@ -108,14 +108,16 @@
     <services>
 			<service behaviorConfiguration="OAIService.Service1Behavior" name="OAIService.OAIPMHService">        
         <endpoint address="" binding="webHttpBinding" contract="OAIService.IOAIPMHService" behaviorConfiguration="webHttp" />
-        <endpoint address="Service" binding="wsHttpBinding" contract="OAIService.IOAIPMHService" />
+        <endpoint address="Service" binding="wsHttpBinding" bindingConfiguration="svcBinding" contract="OAIService.IOAIPMHService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			</service>
 		</services>
     
     <bindings>
       <wsHttpBinding>
-        
+        <binding name="svcBinding">
+          <security mode="None"/>
+        </binding>
       </wsHttpBinding>
     </bindings>
 		<behaviors>
