--- a/trunk/OAIServer/TestOAIService/app.config
+++ b/trunk/OAIServer/TestOAIService/app.config
@@ -37,18 +37,18 @@
                 <binding name="WSHttpBinding_IOAIPMHService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferPoolSize="524288" maxReceivedMessageSize="1000000"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
                     messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
                     allowCookies="false">
-                    <readerQuotas maxDepth="32" maxStringContentLength="100000" maxArrayLength="16384"
-                        maxBytesPerRead="10000" maxNameTableCharCount="16384" />
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00"
                         enabled="false" />
-                    <security mode="Message">
+                    <security mode="None">
                         <transport clientCredentialType="Windows" proxyCredentialType="None"
                             realm="" />
                         <message clientCredentialType="Windows" negotiateServiceCredential="true"
-                            algorithmSuite="Default" establishSecurityContext="true" />
+                            establishSecurityContext="true" />
                     </security>
                 </binding>
             </wsHttpBinding>
@@ -56,11 +56,9 @@
         <client>
             <endpoint binding="customBinding" bindingConfiguration="WebHttpBinding_IOAIPMHService"
                 contract="oai.IOAIPMHService" name="WebHttpBinding_IOAIPMHService" />
-            <endpoint address="http://devserver02/PlantNamesOAI/OAIPMHService.svc/Service"
+            <endpoint address="http://localhost:4785/OAIPMHService.svc/Service"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IOAIPMHService"
-                contract="oai.IOAIPMHService" name="WSHttpBinding_IOAIPMHService">
-               
-            </endpoint>
+                contract="oai.IOAIPMHService" name="WSHttpBinding_IOAIPMHService" />
         </client>
     </system.serviceModel>
 </configuration>
