--- a/trunk/OAIServer/TestOAIService/app.config
+++ b/trunk/OAIServer/TestOAIService/app.config
@@ -24,6 +24,22 @@
     </system.diagnostics>
     <system.serviceModel>
         <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IService" closeTimeout="00:01:00"
+                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+                    allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+                    useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <security mode="None">
+                        <transport clientCredentialType="None" proxyCredentialType="None"
+                            realm="" />
+                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                    </security>
+                </binding>
+            </basicHttpBinding>
             <customBinding>
                 <binding name="WebHttpBinding_IOAIPMHService">
                     <textMessageEncoding maxReadPoolSize="64" maxWritePoolSize="16"
@@ -59,6 +75,9 @@
             <endpoint address="http://localhost:4785/OAIPMHService.svc/Service"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IOAIPMHService"
                 contract="oai.IOAIPMHService" name="WSHttpBinding_IOAIPMHService" />
+            <endpoint address="http://wcf.landcareresearch.co.nz/NZOR/Service.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
+                contract="consumer.IService" name="BasicHttpBinding_IService" />
         </client>
     </system.serviceModel>
 </configuration>
