--- a/trunk/OAIServer/TestOAIService/app.config
+++ b/trunk/OAIServer/TestOAIService/app.config
@@ -22,7 +22,7 @@
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
-    <system.serviceModel>
+    <system.serviceModel>      
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IService" closeTimeout="00:01:00"
@@ -40,26 +40,17 @@
                     </security>
                 </binding>
             </basicHttpBinding>
-            <customBinding>
-                <binding name="WebHttpBinding_IOAIPMHService">
-                    <textMessageEncoding maxReadPoolSize="64" maxWritePoolSize="16"
-                        messageVersion="Soap12" writeEncoding="utf-8">
-                        <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-                    </textMessageEncoding>
-                </binding>
-            </customBinding>
             <wsHttpBinding>
                 <binding name="WSHttpBinding_IOAIPMHService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    maxBufferPoolSize="524288" maxReceivedMessageSize="10000000"
                     messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
                     allowCookies="false">
                     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
                         maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00"
-                        enabled="false" />
+                        enabled="true" />
                     <security mode="None">
                         <transport clientCredentialType="Windows" proxyCredentialType="None"
                             realm="" />
@@ -70,8 +61,6 @@
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint binding="customBinding" bindingConfiguration="WebHttpBinding_IOAIPMHService"
-                contract="oai.IOAIPMHService" name="WebHttpBinding_IOAIPMHService" />
             <endpoint address="http://localhost:4785/OAIPMHService.svc/Service"
                 binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IOAIPMHService"
                 contract="oai.IOAIPMHService" name="WSHttpBinding_IOAIPMHService" />
