--- a/trunk/NZOR/Data/App.Config
+++ b/trunk/NZOR/Data/App.Config
@@ -2,5 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="NZOR_Strawman" connectionString="metadata=res://*/NZOR.csdl|res://*/NZOR.ssdl|res://*/NZOR.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DEVSERVER04\SQL2005;Initial Catalog=NZOR_Strawman;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="NZOR" connectionString="metadata=res://*/Consensus.NZORConsensus.csdl|res://*/Consensus.NZORConsensus.ssdl|res://*/Consensus.NZORConsensus.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DEVSERVER04\SQL2005;Initial Catalog=NZOR_Data;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
