--- a/trunk/NZOR/Data/Data.csproj
+++ b/trunk/NZOR/Data/Data.csproj
@@ -76,6 +76,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\ProviderName.cs" />
+    <Compile Include="SystemData\ConceptRelationshipType.cs" />
+    <Compile Include="SystemData\System.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>System.edmx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
@@ -94,6 +100,10 @@
     <None Include="DsNameMatch.xss">
       <DependentUpon>DsNameMatch.xsd</DependentUpon>
     </None>
+    <EntityDeploy Include="SystemData\System.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>System.Designer.cs</LastGenOutput>
+    </EntityDeploy>
     <EntityDeploy Include="Provider\NZORProvider.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>NZORProvider.Designer.cs</LastGenOutput>
