--- a/trunk/NZOR/NZORTest/App.config
+++ b/trunk/NZOR/NZORTest/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="NZOR" connectionString="Data Source=DEVSERVER04\SQL2005;Initial Catalog=NZOR_Data;Integrated Security=True" />
+    <add name="NZOR_System" connectionString="metadata=res://*/SystemData.SystemData.csdl|res://*/SystemData.SystemData.ssdl|res://*/SystemData.SystemData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DEVSERVER04\SQL2005;Initial Catalog=NZOR_Data;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
