--- a/trunk/NZOR/NZORTest/NZORTest.csproj
+++ b/trunk/NZOR/NZORTest/NZORTest.csproj
@@ -38,6 +38,9 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
