--- a/trunk/NZOR/NZORTestClient/App.config
+++ b/trunk/NZOR/NZORTestClient/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="NZOR" connectionString="Data Source=DEVSERVER05;Initial Catalog=NZOR_Data;Integrated Security=True" />
+    <add name="NZOR" connectionString="Data Source=IDT-LAPTOP;Initial Catalog=NZOR_Data;Integrated Security=True" />
   </connectionStrings>
   <appSettings>
   </appSettings>
