--- a/trunk/NZOR/NZORTest/App.config
+++ b/trunk/NZOR/NZORTest/App.config
@@ -4,6 +4,7 @@
     <add name="NZOR" connectionString="data source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True" />
     <add name="NZOR_System" connectionString="metadata=res://*/SystemData.SystemData.csdl|res://*/SystemData.SystemData.ssdl|res://*/SystemData.SystemData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
     <add name="NZORProvider" connectionString="metadata=res://*/Provider.NZORProvider.csdl|res://*/Provider.NZORProvider.ssdl|res://*/Provider.NZORProvider.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="NZORConsensus" connectionString="metadata=res://*/Consensus.NZORConsensus.csdl|res://*/Consensus.NZORConsensus.ssdl|res://*/Consensus.NZORConsensus.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
