--- a/trunk/NZOR/Data/Data.csproj
+++ b/trunk/NZOR/Data/Data.csproj
@@ -69,6 +69,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Enums.cs" />
+    <Compile Include="MatchResults.cs" />
     <Compile Include="Provider\NZORProvider.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
