--- a/trunk/NZOR/NZORTest/App.config
+++ b/trunk/NZOR/NZORTest/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <add name="NZOR" connectionString="data source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True" />
@@ -7,5 +7,18 @@
     <add name="NZORConsensus" connectionString="metadata=res://*/Consensus.NZORConsensus.csdl|res://*/Consensus.NZORConsensus.ssdl|res://*/Consensus.NZORConsensus.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
