--- a/trunk/NZOR_Admin/NZORAdminWeb/Web.config
+++ b/trunk/NZOR_Admin/NZORAdminWeb/Web.config
@@ -6,11 +6,18 @@
   -->
 
 <configuration>
+
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
+    <add name="NZOR" connectionString="data source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True" />
+    <add name="NZOR_System" connectionString="metadata=res://*/SystemData.SystemData.csdl|res://*/SystemData.SystemData.ssdl|res://*/SystemData.SystemData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="NZORProvider" connectionString="metadata=res://*/Provider.NZORProvider.csdl|res://*/Provider.NZORProvider.ssdl|res://*/Provider.NZORProvider.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="NZORConsensus" connectionString="metadata=res://*/Consensus.NZORConsensus.csdl|res://*/Consensus.NZORConsensus.ssdl|res://*/Consensus.NZORConsensus.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=devserver05;Initial Catalog=NZOR_Data_Test;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+
+  <appSettings>
+    <add key="IntegrationSetNumber" value="1"/>
+    <add key="MatchingAssemblyPath" value="C:\Development\NZOR\Dev\NZOR_Admin\NZORAdminWeb\bin"/>
+  </appSettings>
 
   <system.web>
     <compilation debug="true" targetFramework="4.0">
