--- a/trunk/OAIServer/OAIService/Web.config
+++ b/trunk/OAIServer/OAIService/Web.config
@@ -8,29 +8,12 @@
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
 <configuration>
-	<configSections>
-		<sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-			<sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-				<section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-				<sectionGroup name="webServices" type="System.Web.Configuration.ScriptingWebServicesSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-					<section name="jsonSerialization" type="System.Web.Configuration.ScriptingJsonSerializationSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="Everywhere"/>
-					<section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-					<section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-					<section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
-				</sectionGroup>
-			</sectionGroup>
-		</sectionGroup>
-	</configSections>
-  
-  
 	<appSettings>
-    <add key="LOG_FILE" value="C:\Development\NZOR\Dev\OAIServer\OAIService\Log\log.txt" />
-    <add key="DEBUG" value="true"/>
-    <add key="MaxRecordsReturned" value="500"/>
-    <add key="TokenExpirationHours" value="2"/>
-  </appSettings>
-    
-    
+		<add key="LOG_FILE" value="C:\Development\NZOR\Dev\OAIServer\OAIService\Log\log.txt"/>
+		<add key="DEBUG" value="true"/>
+		<add key="MaxRecordsReturned" value="500"/>
+		<add key="TokenExpirationHours" value="2"/>
+	</appSettings>
 	<connectionStrings/>
 	<system.web>
 		<!--
@@ -39,11 +22,7 @@
             affects performance, set this value to true only 
             during development.
         -->
-		<compilation debug="true">
-			<assemblies>
-				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			</assemblies>
+		<compilation debug="true" targetFramework="4.0">
 		</compilation>
 		<!--
             The <authentication> section enables configuration 
@@ -63,77 +42,41 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-		<pages>
-			<controls>
-				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			</controls>
-		</pages>
-		<httpHandlers>
-			<remove verb="*" path="*.asmx"/>
-			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
-		</httpHandlers>
-		<httpModules>
-			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		</httpModules>
-	</system.web>
-	<system.codedom>
-		<compilers>
-			<compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-				<providerOption name="CompilerVersion" value="v3.5"/>
-				<providerOption name="WarnAsError" value="false"/>
-			</compiler>
-		</compilers>
-	</system.codedom>
+		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/></system.web>
 	<!--
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
-	<system.webServer>
-		<validation validateIntegratedModeConfiguration="false"/>
-		<modules>
-			<add name="ScriptModule" preCondition="integratedMode" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		</modules>
-		<handlers>
-			<remove name="WebServiceHandlerFactory-Integrated"/>
-			<add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-		</handlers>
-	</system.webServer>
 	<system.serviceModel>
-
-    <services>
+		<services>
 			<service behaviorConfiguration="OAIService.Service1Behavior" name="OAIService.OAIPMHService">
-        <endpoint address="" binding="webHttpBinding" contract="OAIService.IOAIPMHService" behaviorConfiguration="webHttp" />
-        <endpoint address="Service" binding="wsHttpBinding" bindingConfiguration="svcBinding" contract="OAIService.IOAIPMHService" />
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+				<endpoint address="" binding="webHttpBinding" contract="OAIService.IOAIPMHService" behaviorConfiguration="webHttp"/>
+				<endpoint address="Service" binding="wsHttpBinding" bindingConfiguration="svcBinding" contract="OAIService.IOAIPMHService"/>
+				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			</service>
 		</services>
-    
-    <bindings>
-      <wsHttpBinding>
-        <binding name="svcBinding">          
-          <security mode="None"/>        
-        </binding>
-      </wsHttpBinding>
-    </bindings>
+		<bindings>
+			<wsHttpBinding>
+				<binding name="svcBinding">
+					<security mode="None"/>
+				</binding>
+			</wsHttpBinding>
+		</bindings>
 		<behaviors>
 			<serviceBehaviors>
-				<behavior name="OAIService.Service1Behavior">          
+				<behavior name="OAIService.Service1Behavior">
 					<!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
 					<serviceMetadata httpGetEnabled="true"/>
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
 					<serviceDebug includeExceptionDetailInFaults="true"/>
-          <serviceAuthorization principalPermissionMode="None" />               
+					<serviceAuthorization principalPermissionMode="None"/>
 				</behavior>
 			</serviceBehaviors>
-      <endpointBehaviors>
-        <behavior name="webHttp">                    
-          <webHttp/>
-        </behavior>
-      </endpointBehaviors>
+			<endpointBehaviors>
+				<behavior name="webHttp">
+					<webHttp/>
+				</behavior>
+			</endpointBehaviors>
 		</behaviors>
 	</system.serviceModel>
 </configuration>
