--- a/trunk/OAIServer/OAIService/OAIService.csproj
+++ b/trunk/OAIServer/OAIService/OAIService.csproj
@@ -70,7 +70,10 @@
     <Content Include="Responses\GetRecordResponse.xml" />
     <Content Include="Responses\IdentifyResponse.xml" />
     <Content Include="Responses\ListRecordsResponse.xml" />
-    <Content Include="Responses\RecordSnippet.xml" />
+    <Content Include="Responses\ListSetsSnippet.xml" />
+    <Content Include="Responses\RecordSnippet.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Responses\ResumptionSnippet.xml" />
     <Content Include="Services\test_config.xml" />
     <Content Include="Web.config" />
@@ -98,7 +101,9 @@
     <Content Include="Responses\ListIdentifiersResponse.xml" />
     <Content Include="Responses\ListMetadataFormatsResponse.xml" />
     <Content Include="Responses\ListSetsResponse.xml" />
-    <Content Include="Services\plantnames_config.xml" />
+    <Content Include="Services\plantnames_config.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
