--- a/trunk/NZOR/Integration/Integration.csproj
+++ b/trunk/NZOR/Integration/Integration.csproj
@@ -59,7 +59,7 @@
     <Compile Include="ConfigSet.cs" />
     <Compile Include="IntegrationProcessor.cs" />
     <Compile Include="IntegrationProcessor2.cs" />
-    <Compile Include="Integrator.cs" />
+    <Compile Include="MatchProcessor.cs" />
     <Compile Include="IntegratorThread.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
