--- a/trunk/NZOR/Matching/Matching.csproj
+++ b/trunk/NZOR/Matching/Matching.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routines\BaseMatcher.cs" />
     <Compile Include="Routines\INameMatcher.cs" />
+    <Compile Include="Routines\MatchData.cs" />
     <Compile Include="Routines\NamesAtRankWithAncestor.cs" />
     <Compile Include="Routines\NamesWithAuthors.cs" />
     <Compile Include="Routines\NamesWithExactCanonical.cs" />
