--- a/trunk/NZOR/Data/Data.csproj
+++ b/trunk/NZOR/Data/Data.csproj
@@ -88,7 +88,7 @@
     <Compile Include="SystemData\TaxonRank.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="SystemData\App.Config" />
     <None Include="DsNameMatch.xsc">
       <DependentUpon>DsNameMatch.xsd</DependentUpon>
     </None>
